# packaging

./: cli_commands.txt
components/useful_project_backend/: README.md  pyproject.toml  setup.py
components/useful_project_backend/tests/integration/adapters/storage/: conftest.py  repositories.py
components/useful_project_backend/tests/unit/application/: conftest.py  test_services.py
components/useful_project_backend/useful_project/adapters/cli/: __init__.py  cli.py
components/useful_project_backend/useful_project/adapters/log/: __init__.py  config.py  settings.py
components/useful_project_backend/useful_project/adapters/storage/: __init__.py  repositories.py
components/useful_project_backend/useful_project/application/: entities.py  interfaces.py  services.py
components/useful_project_backend/useful_project/composites/: cli.py  consumer.py
